############################################################################################
# ChangeLog for Mailing Lists
# $Id: changelog.txt,v 1.57 2008/09/27 00:43:24 blindman1344 Exp $
#
# Author: Greg Meiste <blindman1344 [at] users dot sourceforge dot net>
############################################################################################


*mailinglists-1.2.1 (26 Sep 2008)

    - Added more error checks when sending emails.  Will help when debugging issues.
    - BUG #2109418: Fixed issue sending emails with an apostrophe in "from" or "subject".

*mailinglists-1.2.0 (23 Aug 2008)

    - RFE #1274746: Purge subscribers who haven't activated in over 2 days.
    - File Cabinet added to email forms for HTML messages.
    - Emails are now templated (email/send_html.tpl and email/send_text.tpl).
    - Added workaround for issue where emails could be sent with relative URLs.
    - Now call cacheQueries on all DBPagers to retain pager settings.
    - Support Smart Tags in HTML emails.

*mailinglists-1.1.0 (21 Jun 2008)

    - RFE #1274782: Purge deleted site users (Now requiring phpWebSite 1.5.2 or later)

*mailinglists-1.0.0 (04 Jan 2008)

    - Complete rewrite to support phpWebSite 1.4.0 and later
    - RFE #1838405: Throttle mail sending
    - RFE #1293041: Archive link from admin page
    - RFE #1274788: Support bulk subscribe/unsubscribe in Subscriber Admin

*mailinglists-0.5.7 (02 Jan 2008)

    - BUG #1406165: Patch for some errors in the admin forms
    - BUG #1731124: Another List ID > 9 fix
    - Added Italian languange file (Thanks Gianluigi Coppelletti!)

*mailinglists-0.5.6 (11 Sep 2005)

    - BUG #1283077: Subscriber admin paging now works for lists with ID > 9
    - Changed from double quotes to single quotes for static strings
    - Fixed several notices
    - BUG #1285088: If list is hidden, visitor must be logged in and a subscriber to
      that list to view its archives.

*mailinglists-0.5.5 (02 Sep 2005)
