@@ -293,7 +293,7 @@ convey the exclusion of warranty; and each file should have at least
 the "copyright" line and a pointer to where the full notice is found.
 
 Mailing Lists
-Copyright (C) 2003-2007  Greg Meiste
+Copyright (C) 2003-2009  Greg Meiste
 
 This program is free software; you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
@@ -310,4 +310,4 @@ along with this program; if not, write to the Free Software
 Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 
 Greg Meiste
-blindman1344 [at] users dot sourceforge dot net
+greg.meiste+github@gmail.com
